# atelier-assets

./: Cargo.toml
kv-store/: Cargo.toml
kv-store/proc-macros/: Cargo.toml
kv-store/proc-macros/build_fail_tests/binary_static_env/require_binary_cursor/: empty_args.stderr  invalid_item_type.rs  no_args.rs  no_args.stderr  test_0.stderr  test_1.rs  test_1.stderr  test_2.stderr  too_many_args.rs  too_many_args.stderr
kv-store/proc-macros/build_fail_tests/binary_static_env/require_binary_rw_cursor/: empty_args.stderr  invalid_item_type.stderr  no_args.rs  no_args.stderr  test_0.stderr  test_1.rs  test_1.stderr  test_2.rs  test_2.stderr  test_3.rs  too_many_args.stderr
kv-store/proc-macros/build_fail_tests/binary_static_env/require_binary_rw_txn/: empty_args.stderr  no_args.rs  no_args.stderr  test_0.stderr  test_1.rs  test_1.stderr  test_2.rs  test_2.stderr  test_3.rs  too_many_args.stderr
kv-store/proc-macros/build_fail_tests/binary_static_env/require_binary_static_env/: empty_args.stderr  no_args.rs  no_args.stderr  test_0.rs  test_0.stderr  test_1.rs  test_1.stderr  test_2.rs  test_2.stderr  test_3.rs  test_3.stderr  test_4.rs  too_many_args.rs  too_many_args.stderr
kv-store/proc-macros/build_fail_tests/binary_static_env/require_binary_static_env_ext/: empty_args.stderr  invalid_item_type.rs  no_args.rs  no_args.stderr  test_0.stderr  test_1.rs  test_1.stderr  test_2.rs  test_2.stderr  test_3.rs  test_3.stderr  test_4.stderr  too_few_args.stderr  too_many_args.stderr
kv-store/proc-macros/build_fail_tests/binary_static_env/require_binary_txn/: empty_args.rs  empty_args.stderr  no_args.rs  no_args.stderr  test_0.stderr  test_1.stderr  test_2.rs  test_2.stderr  test_3.rs  too_many_args.stderr
kv-store/proc-macros/src/: binary_static_env.rs  lib.rs
kv-store/proc-macros/src/binary_static_env/: require_binary_cursor.rs  require_binary_rw_cursor.rs  require_binary_rw_txn.rs  require_binary_static_env.rs  require_binary_static_env_ext.rs  require_binary_txn.rs
kv-store/proc-macros/tests/: binary_static_env.rs
kv-store/src/: in_mem.rs  iter.rs  lib.rs  lmdb.rs  lt_trait_wrappers.rs  test_util.rs
kv-store/src/test_util/: binary_static_env.rs
kv_store/: Cargo.toml
kv_store/src/: iter.rs  lib.rs  lmdb.rs
