[package]
name = "atelier-kv-store-proc-macros"
version = "0.1.0"
edition = "2018"
description = "Procedural macros for atelier-kv-store crate"

license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "parsing", "printing", "clone-impls", "extra-traits", "proc-macro", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
atelier-kv-store = { path = ".." }
trybuild = "1.0"